MB-55798: If an engine exists use the vbucket HLC for history time

Wire the getHistoryTimeNow function through to the correct vbucket
HLC when an engine pointer is available.

Change-Id: Ie4137956ff063901be8b0e673eb08c129842c602
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/195392
Reviewed-by: Trond Norbye <trond.norbye@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>